--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="US">
 <head>
-  
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-3.6.0.js"></script>
+  <script src="js/scripts.js"></script>
+  <title>Flashcard Site</title>
 </head>
+<body>
+  <div class="container">
+    <h1>Flashcard Site</h1>
+    <div class="hidden-content">
+      <p><span class="clickable">JavaScript Definition</span></p>
+    </div>
+    <div class="shown-content">
+      <p><span class="clickable">JavaScript Definition</span>: The definition of javascript is as follows.</p>
+    </div>
+  </div>
+</body>
 </html>
