add individual functionality to each term

--- a/index.html
+++ b/index.html
@@ -10,12 +10,25 @@
 <body>
   <div class="container">
     <h1>Flashcard Site</h1>
-    <div class="hidden-content">
-      <p><span class="clickable">JavaScript Definition</span></p>
+    <div class="javascript-content">
+      <div class="hidden-content">
+        <p><span class="clickable">JavaScript Definition</span></p>
+      </div>
+      <div class="shown-content">
+        <p><span class="clickable">JavaScript Definition</span>: A JavaScript function is a block of code designed to perform a particular task.</p>
+      </div>
     </div>
-    <div class="shown-content">
-      <p><span class="clickable">JavaScript Definition</span>: The definition of javascript is as follows.</p>
+
+    <div class="operator-content">
+      <div class="hidden-content">
+        <P><span class="clickable">Operators</span></P>
+      </div>
+      <div class="shown-content">
+        <p><span class="clickable">Operators</span>: An operator is capable of manipulating a certain value or operand. Operators are used to perform specific mathematical and logical computations on operands. In JavaScript operators are used for compare values, perform arithmetic operations etc.</p>
+      </div>
     </div>
   </div>
 </body>
 </html>
+
+
