--- a/index.html
+++ b/index.html
@@ -27,6 +27,33 @@
         <p><span class="clickable">Operators</span>: An operator is capable of manipulating a certain value or operand. Operators are used to perform specific mathematical and logical computations on operands. In JavaScript operators are used for compare values, perform arithmetic operations etc.</p>
       </div>
     </div>
+
+    <div class="variable-content">
+      <div class="hidden-content">
+        <p><span class="clickable">Variables</span></p>
+      </div>
+      <div class="shown-content">
+        <p><span class="clickable">Variables</span>: stores the data value that can be changed later on.</p>
+      </div>
+    </div>
+
+    <div class="function-content">
+      <div class="hidden-content">
+        <p><span class="clickable">Functions</span></p>
+      </div>
+      <div class="shown-content">
+        <p><span class="clickable">Functions</span>: a set of statements that performs a task or calculates a value and returns it.</p>
+      </div>
+    </div>
+
+    <div class="method-content">
+      <div class="hidden-content">
+        <p><span class="clickable">Methods</span></p>
+      </div>
+      <div class="shown-content">
+        <p><span class="clickable">Methods</span>: methods are actions that can be performed on objects.</p>
+      </div>
+    </div>
   </div>
 </body>
 </html>
